--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.2d.sprite": "1.0.0",
     "com.unity.ads": "4.4.2",
     "com.unity.analytics": "3.8.1",
     "com.unity.animation.rigging": "1.2.1",
@@ -9,6 +10,7 @@
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.7.0",
+    "com.unity.postprocessing": "3.2.2",
     "com.unity.purchasing": "4.9.3",
     "com.unity.render-pipelines.high-definition": "14.0.8",
     "com.unity.render-pipelines.universal": "14.0.8",
